<resources>
    <string name="app_name">SkyWinner</string>
    <string name="shareContent">"Addicted to PUBG? Want to make some cash out of it?? Try out SkyWinner, eSports platform. Join Daily PUBG Matches &amp; Get Rewards on Each Kill you score.
        Get Huge Prize on Getting Chicken Dinner. Just Download SkyWinner Android App &amp; Register using the PromoCode given Below to Get 5 PlayCoins Free Signup Bonus.\n\nDownload Link: http://www.pubg.skyforcoding.com\nPromo Code: "</string>
    <string name="shareSub">Pay PUBG Mobile &amp; Earn Money</string>
    <string name="adAppId">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_Rewarded_Video_Ads">ca-app-pub-3940256099942544/5224354917</string>
    <string name="desc_refer">Invite your friends on App using your Promo Code to Earn 10 PlayCoins when they join first paid match. Your friends also get 5 PlayCoins as Signup Bonus!</string>
    <string name="note_refer">Note: get coin after join paid match.</string>
    <string name="desc_reward">Watch videos to get reward after every day.</string>
    <string name="note_reward">*Note: get coin after complete task.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet_body">You are not connected to the Internet</string>
    <string name="no_internet_title">No Internet</string>
    <string name="airplane">Airplane mode</string>
    <string name="airplane_on">You have turned on the airplane mode.</string>
    <string name="mobile">Mobile data</string>
    <string name="wifi_on">Wifi</string>
    <string name="turn_off">Please turn off</string>
    <string name="turn_on">Please turn on</string>
    <string name="success">Successful</string>
    <string name="rejected">Rejected</string>
    <string name="failed">Failed</string>
    <string name="pending">Processing</string>
    <string name="sufficientBalanceText">You have enough PlayCoins to join this match.</string>
    <string name="you_don_t_have_sufficient_balance">You don\'t have sufficient balance</string>
    <string name="forceUpdateNote">Note: In order to continue using the app, you must have to update it to the latest version.</string>
    <string name="otp_text">We have sent 6 digit OTP on your given Mobile Number through SMS. Kindly check and enter it below to complete your Registration.</string>
    <string name="win_prize">WIN PRIZE</string>
    <string name="per_kill">PER KILL</string>
    <string name="entry_fee">ENTRY FEE</string>
    <string name="type">TYPE</string>
    <string name="version">VERSION</string>
    <string name="map">MAP</string>
    <string name="watch_match">Watch Match</string>
    <string name="joined">Joined</string>
    <string name="join">JOIN</string>
    <string name="spectate">Spectate</string>
    <string name="play_now">Play Now</string>
    <string name="results_coming_soon">Results Coming Soon!</string>
    <string name="check_back_in_sometime">Check back in sometime...</string>
    <string name="no_upcoming_matches">No upcoming matches!</string>
    <string name="there_are_no_upcoming_matches_currently_ncheck_back_in_some_time">There are no upcoming matches currently. Check back in some time..</string>
    <string name="no_ongoing_matches">No ongoing matches!</string>
    <string name="there_are_no_ongoing_matches_currently_ncheck_back_in_some_time">There are no ongoing matches currently. Check back in some time...</string>
    <string name="matches_played">Matches Played</string>
    <string name="total_kills">Total Kills</string>
    <string name="playcoin_won">PlayCoin Won</string>
    <string name="account_holder_name">Account holder name</string>
    <string name="account_number">Account number</string>
    <string name="bank_name">Bank Name</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="phone_number">Phone number</string>
    <string name="code">Code</string>
    <string name="registered_name">Registered Name</string>
    <string name="playcoin">PlayCoin</string>
    <string name="play_coin_to_redeem">Play Coin to Redeem</string>
    <string name="redeem">Redeem</string>
    <string name="our_mission">Our Mission</string>
    <string name="contact_us">Contact Us</string>
    <string name="email_id">Email Id</string>
    <string name="phone_no">Phone No</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="messenger">Messenger</string>
    <string name="live_chat_support">Live Chat Support</string>
    <string name="our_address">Our Address</string>
    <string name="follow_us">Follow Us</string>
    <string name="googlepay_number">GooglePay Number</string>
    <string name="googlepay_name">GooglePay Name</string>
    <string name="match_title">Match Title:</string>
    <string name="entry_fee_">Entry Fee :</string>
    <string name="available_playcoin_">Available PlayCoin :</string>
    <string name="won_playcoin_">Won PlayCoin :</string>
    <string name="join_now">JOIN NOW</string>
    <string name="add_money">ADD MONEY</string>
    <string name="full_name">Full Name</string>
    <string name="my_contest">My Contest</string>
    <string name="home">Home</string>
    <string name="my_account">My Account</string>
    <string name="there_are_no_transactions_yet">There are no transactions yet...</string>
    <string name="refer_amp_earn"><![CDATA[Refer & Earn]]></string>
    <string name="my_profile">My Profile</string>
    <string name="my_wallet">My Wallet</string>
    <string name="my_statistics">My Statistics</string>
    <string name="top_players">Top Players</string>
    <string name="important_updates">Important Updates</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="customer_support">Customer Support</string>
    <string name="faq">FAQ</string>
    <string name="share_app">Share App</string>
    <string name="logout">Logout</string>
    <string name="participated">Participated</string>
    <string name="account_verification">Account Verification</string>
    <string name="get_otp_on_call">Get OTP on Call</string>
    <string name="something_wrong">Something wrong...</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="instructions">Instructions</string>
    <string name="no_new_pubg_accounts_allowed">No New PUBG Accounts Allowed</string>
    <string name="default_match_notice">Default match notice</string>
    <string name="i_agree">I AGREE</string>
    <string name="private_match_text">This match is private match. Users with access code can only participate. If you have got the access code, please enter it below.</string>
    <string name="access_code">Access Code</string>
    <string name="pubg_username">PUBG Username</string>
    <string name="enter_pubg_username">Enter PUBG Username</string>
    <string name="note_make_sure_you_enter_your_pubg_username_ign_and_not_character_id">Note: Make sure you enter your PUBG Username (IGN) and not Character ID.</string>
    <string name="pubg_room_details">PUBG Room Details</string>
    <string name="room_id">Room ID:</string>
    <string name="room_password">Room Password:</string>
    <string name="join_match_warning">Join Match Warning</string>
    <string name="how_to_join_room_click_here">How to Join Room? Click Here</string>
    <string name="play">Play</string>
    <string name="forget">Forget</string>
    <string name="please_don_t_cancel_wait_until_you_get_otp_from_us">Please don\'t cancel, Wait until you get otp from us.</string>
    <string name="forget_password">Forget Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="warning">Please don\'t cancel, Wait until you get otp from us.</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="response_text">Response Text</string>
    <string name="reset">Reset</string>
    <string name="new_update_is_available">New Update is Available</string>
    <string name="new_version_v1_5">New Version: v1.5</string>
    <string name="updated_on_16_10_2018">Updated On: 16/10/2018</string>
    <string name="what_s_new">What\'s New?</string>
    <string name="later">LATER</string>
    <string name="update">UPDATE</string>
    <string name="type_">Type:</string>
    <string name="version_">Version:</string>
    <string name="map_">Map:</string>
    <string name="match_type_">Match Type:</string>
    <string name="match_schedule_">Match Schedule:</string>
    <string name="winning_prize_">Winning Prize:</string>
    <string name="per_kill_">Per Kill:</string>
    <string name="prize_details">Prize Details</string>
    <string name="about_this_match">About this Match</string>
    <string name="participants">Participants</string>
    <string name="load_participants">Load Participants</string>
    <string name="position">Position</string>
    <string name="winning">Winning</string>
    <string name="register_your_squad">Register your Squad</string>
    <string name="important_notes">Important Notes</string>
    <string name="pubg_accounts_with_level_less_than_25_aren_t_allowed_to_participate_so_don_t_register_such_entries_such_account_will_be_kicked_from_the_room_and_refund_for_the_same_will_not_be_processed_n_make_sure_you_enter_your_pubg_username_ign_and_not_character_id">• PUBG Accounts with Level less than 25 aren\'t allowed to Participate. So don\'t register such entries. Such account will be kicked from the room and refund for the same will not be processed.  • Make sure you enter your PUBG Username (IGN) and not Character ID.</string>
    <string name="reward_offer_paused">Reward Offer Paused!</string>
    <string name="reward_offer_is_currently_under_maintenance_nstay_tuned_for_further_updates">Reward Offer is currently under maintenance.  Stay Tuned for further updates!</string>
    <string name="watch_more_to_earn_more">Watch More to Earn More!</string>
    <string name="complete_task">Complete Task</string>
    <string name="watch_now">Watch Now</string>
    <string name="pubg_mobile_match_title">PUBG Mobile Match Title</string>
    <string name="organised_on_dd_mm_yyyy_at_hh_mm_a">Organised on DD/MM/YYYY at HH:MM A</string>
    <string name="special_notes">Special Notes</string>
    <string name="winner_chicken_dinner">Winner Chicken Dinner</string>
    <string name="kills">Kills</string>
    <string name="create_new_account">Create New Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="promo_code_optional">Promo Code (Optional)</string>
    <string name="register">Register</string>
    <string name="i_agree_to">I agree to</string>
    <string name="terms_amp_conditions"><![CDATA[terms & conditions]]></string>
    <string name="sign_in">SIGN IN</string>
    <string name="referral_offer_paused">Referral Offer Paused!</string>
    <string name="referral_offer_is_currently_under_maintenance_nstay_tuned_for_further_updates">Referral Offer is currently under maintenance.  Stay Tuned for further updates!</string>
    <string name="refer_more_to_earn_more">Refer More to Earn More!</string>
    <string name="refer_now">Refer Now</string>
    <string name="your_promo_code">Your Promo Code</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="save">Save</string>
    <string name="old_password">Old Password</string>
    <string name="retype_new_password">Retype New Password</string>
    <string name="successfully_updated">Successfully Updated.</string>
</resources>