<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activity.RefereEarnActivity">

    <include layout="@layout/appbar" />
    <LinearLayout android:orientation="vertical" android:id="@+id/noReferOffer" android:background="@color/darkBlue" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:layout_gravity="center" android:layout_width="300.0dip" android:layout_height="300.0dip" android:layout_marginTop="65.0dip" android:src="@drawable/referandearn" />
        <TextView android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" android:textColor="@color/colorAccent" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/referral_offer_paused" />
        <TextView android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="center" android:id="@+id/referralExpiredText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/referral_offer_is_currently_under_maintenance_nstay_tuned_for_further_updates" android:fontFamily="@font/lato" />
    </LinearLayout>
    <androidx.core.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:id="@+id/referralLL" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="vertical" android:background="@color/darkBlue" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView android:layout_gravity="center" android:layout_width="100.0dip" android:layout_height="100.0dip" android:src="@drawable/refer" />
                <TextView android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" android:textStyle="bold" android:textColor="#ffecab31" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/refer_more_to_earn_more" android:textAllCaps="true" android:fontFamily="@font/lato_black" />
                <TextView android:textSize="15.0sp" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="center" android:id="@+id/refMessage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/desc_refer" android:fontFamily="@font/lato" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <TextView android:textSize="15.0sp" android:textStyle="bold" android:textColor="#ff302f2f" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/your_promo_code" android:textAllCaps="true" />
                <TextView android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" android:textColor="#ff000000" android:layout_gravity="center" android:id="@+id/referCode" android:background="@drawable/dotted_border" android:padding="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/app_name" android:textIsSelectable="true" android:fontFamily="@font/lato_black" />
                <ImageView android:id="@+id/howrefer" android:focusable="true" android:layout_width="wrap_content" android:layout_height="200.0dip" android:layout_marginTop="5.0dip" android:src="@drawable/refern_n_earn" />
                <Button android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" android:textStyle="bold" android:textColor="#ffffffff" android:layout_gravity="center" android:id="@+id/referButton" android:background="@drawable/buttonback" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="10.0dip" android:text="@string/refer_now" android:textAllCaps="true" android:fontFamily="@font/lato" android:backgroundTint="@color/darkBlue" />
                <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="#ff302f2f" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/note_refer" android:textAllCaps="false" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>
