<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0.0dip"
    app:cardCornerRadius="0.0dip"
    app:cardPreventCornerOverlap="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/mainRL" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <RelativeLayout android:id="@id/topHeader" android:background="@color/blueRandom" android:layout_width="fill_parent" android:layout_height="?actionBarSize">
            <TextView android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pubg_room_details" android:layout_centerInParent="true" android:fontFamily="@font/lato_black" />
        </RelativeLayout>
        <RelativeLayout android:gravity="center" android:id="@id/roomIDPassRL" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:layout_below="@id/topHeader">
            <TextView android:textSize="20.0sp" android:id="@id/roomIDText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/room_id" android:fontFamily="@font/lato" />
            <TextView android:textSize="20.0sp" android:id="@id/roomIDValue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginBottom="5.0dip" android:text="15263" android:layout_toRightOf="@id/roomIDText" android:fontFamily="@font/lato_black" />
            <TextView android:textSize="20.0sp" android:id="@id/roomPassText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:layout_marginBottom="5.0dip" android:text="@string/room_password" android:layout_below="@id/roomIDText" android:fontFamily="@font/lato" />
            <TextView android:textSize="20.0sp" android:id="@id/roomPassValue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="2.0dip" android:layout_marginBottom="5.0dip" android:text="PLZ123" android:layout_toRightOf="@id/roomPassText" android:layout_below="@id/roomIDText" android:fontFamily="@font/lato_black" />
        </RelativeLayout>
        <TextView android:gravity="center" android:id="@+id/matchJoinWarning" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="5.0dip" android:text="@string/join_match_warning" android:layout_below="@id/roomIDPassRL" />
        <TextView android:textSize="17.0sp" android:gravity="center" android:id="@+id/howJoinRoom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="5.0dip" android:text="@string/how_to_join_room_click_here" android:layout_below="@+id/matchJoinWarning" android:fontFamily="@font/lato" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="15.0dip" android:layout_below="@+id/howJoinRoom">
            <LinearLayout android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                <Button android:textSize="15.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:id="@id/cancel" android:background="@drawable/background1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/cancel" android:textAllCaps="true" android:fontFamily="@font/lato" android:backgroundTint="#ff757575" />
            </LinearLayout>
            <LinearLayout android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                <Button android:textSize="15.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:id="@+id/play" android:background="@drawable/background1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/play" android:textAllCaps="true" android:fontFamily="@font/lato" android:backgroundTint="@color/blueRandom" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>